--- a/workspace/.recommenders/caches/identified-project-coordinates.json
+++ b/workspace/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"/Users/chenyankai/GitDefault/workspace/HC","type":"PROJECT","hints":{"PROJECT_NAME":"HC"}},"ABSENT"],[{"location":"/Library/Java/JavaVirtualMachines/jdk1.8.0_111.jdk/Contents/Home","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"]]
+[[{"location":"/Library/Java/JavaVirtualMachines/1.6.0.jdk/Contents/Home","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.6"}},"jre:jre:1.6.0"],[{"location":"/Users/chenyankai/GitDefault/workspace/ccs","type":"PROJECT","hints":{"PROJECT_NAME":"ccs"}},"ABSENT"]]
