--- a/workspace/HC/.classpath
+++ b/workspace/HC/.classpath
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="lib/jtidy-r938.jar"/>
 	<classpathentry kind="lib" path="lib/commons-net-3.6.jar"/>
 	<classpathentry kind="lib" path="/Users/chenyankai/harvester2-0.1.12/xercesImpl.jar"/>
@@ -9,5 +8,8 @@
 	<classpathentry kind="lib" path="/Users/chenyankai/harvester2-0.1.12/xalan.jar"/>
 	<classpathentry kind="lib" path="/Users/chenyankai/harvester2-0.1.12/log4j-1.2.12.jar"/>
 	<classpathentry kind="lib" path="/Users/chenyankai/harvester2-0.1.12/harvester2.jar"/>
+	<classpathentry kind="lib" path="lib/jsoup-1.10.3.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="/Users/chenyankai/gitRepository/workspace/HC/lib/dom4j-2.1.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
