--- a/workspace/HC/.classpath
+++ b/workspace/HC/.classpath
@@ -11,5 +11,6 @@
 	<classpathentry kind="lib" path="lib/jsoup-1.10.3.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="/Users/chenyankai/gitRepository/workspace/HC/lib/dom4j-2.1.0.jar"/>
+	<classpathentry kind="lib" path="/Users/chenyankai/gitRepository/workspace/HC/lib/htmlunit-2.27-OSGi.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
